--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "graphql": "^16.8.1",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.13.8",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
