--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test": "jest --watchAll",
+    "test:coverage": "jest --coverage --watchAll"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -20,21 +20,24 @@
     "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
+    "@faker-js/faker": "^8.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-testing-library": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
 }
